# sticky_db

./: .gitignore  README.md  mix.exs
lib/: sticky_db.ex
lib/memory_storage/: adapter.ex
lib/sticky_db/: native.ex  storages.ex
lib/sticky_db/storages/: memory_storage.ex
native/sticky/: Cargo.toml
native/sticky/src/: glue.rs  lib.rs
native/sticky/src/storages/: memory_storage.rs
test/: memory_storage_test.exs  sticky_db_test.exs
