[package]
name = "sticky"
authors = ["Hoon Wee <mrgravity817@gmail.com>"]
version = "0.0.1"
edition = "2021"

[lib]
name = "sticky"
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
gluesql-core = "0.15.0"
gluesql_memory_storage = "0.15.0"
rustler = "^0.29.0"
serde_json = "1"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
] }

